syntax = "proto3";

message UpdateCommentParams {
  string commentId = 1;
}